fix regression: allow full-bleed photos

--- a/src/htdocs/css/features/_fieldnotes.scss
+++ b/src/htdocs/css/features/_fieldnotes.scss
@@ -5,8 +5,8 @@
   h4,
   p,
   time {
-    margin-left: 20px;
-    margin-right: 20px;
+    margin-left: 1rem;
+    margin-right: 1rem;
   }
   dl {
     margin-top: .5rem;
@@ -25,20 +25,13 @@
     margin-top: 4px;
   }
 
-  .params {
-    max-height: 400px;
-    overflow: hidden;
-    transition: max-height .3s ease-out;
-  }
-
   .hide + .params {
     max-height: 0;
     transition: max-height .1s ease-in;
   }
 
   .leaflet-popup-content {
-    margin-left: 0;
-    margin-right: 0;
+    margin: 0.75rem 0 !important; // allow "full-bleed" photos
   }
 
   .leaflet-popup-content-wrapper {
@@ -55,6 +48,12 @@
       display: inline-block;
       padding-top: 3px;
     }
+  }
+
+  .params {
+    max-height: 400px;
+    overflow: hidden;
+    transition: max-height .3s ease-out;
   }
 
   .photo {
